<resources>
    <string name="app_name">心的一天</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首頁</string>
    <string name="menu_gallery">我的日記</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="userTrueName">王小明</string>
    <string name="prompt_password">Password</string>
    <string name="reenter_prompt_password">Password</string>

    <string name="action_sign_in">登入</string>
    <string name="action_Register">Click here to <u>註冊</u></string>
    <string name="action_sign_in_short">登入</string>
    <string name="welcome">"歡迎回來!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">記得我</string>
    <string name="forget_password">忘記密碼？</string>
    <!-- activity_register  -->
    <string name="surname">真實姓名</string>
    <string name="make_register">註冊</string>
    <string name="input_email">帳號</string>
    <string name="input_gender">性別</string>
    <string name="input_gender_male">男生</string>
    <string name="input_gender_female">女生</string>
    <string name="make_password">密碼</string>
    <string name="reenter_password">確認密碼</string>
    <string name="input_birthday">生日</string>
    <string name="input_birthday_hint">Ex:1999-12-07</string>

    <string-array name="diary">
        <item>目前沒有日記唷！趕快來新增日記吧！</item>


    </string-array>
    <string name="title_activity_choose_category">chooseCategory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
